[artf617907]- alignment issues in build tab and customer dropdown.

--- a/phresco-framework-web/src/main/webapp/theme/photon/css/media-queries.css
+++ b/phresco-framework-web/src/main/webapp/theme/photon/css/media-queries.css
@@ -40,7 +40,7 @@ Width <= 1024
 		margin: 0.1% 0%;
 	}
 	.customer_name {
-		right:2.5%;
+		right:0.7%;
 	}
 
 	.content_adder {
@@ -492,7 +492,7 @@ Width <= 1024
 	}
 
 	.builds-list-table .th-inner {
-		top: 175px;
+		top: 145px;
 	}	
 
 	#subcontainer {width: 77.5%; float:right; }
@@ -3447,7 +3447,7 @@ Width > 1360 and <= 1440
 	}
 
 	.customer_name {
-		right: 3.5% !important;
+		right: 0.7% !important;
 	}
     
 	 @-moz-document url-prefix() {
