--- a/phresco-framework-web/src/main/webapp/theme/photon/css/phresco_default.css
+++ b/phresco-framework-web/src/main/webapp/theme/photon/css/phresco_default.css
@@ -5574,7 +5574,7 @@ a[id='androidSigning']:hover {
     position: absolute;
     top: 45px;
     width: auto;
-	right:2.5%;
+	right:0.7%;
 }
 .customer_name label {
 	color: #ccc;
@@ -5688,7 +5688,7 @@ input[class*='chckBxAlign'] {
 }
 
 .builds-list-table .th-inner {
-	top: 160px;
+	top: 145px;
 }	
 /*new css for 2.0 ends*/
 
